Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -306,14 +306,15 @@ body {
   padding: 0.8rem 0.5rem 1.1rem;
   transition: 0.3s ease;
   margin-top: 20px;
+  max-height: 100%; 
 }
 .services-box .services-content:hover {
   box-shadow: var(--box-shadow);
 }
 .services-box {
-  max-height: 505px; /* Define a maximum height similar to Work Experience */
-  overflow-y: auto;  /* Enable scrolling if the content exceeds this height */
-  -webkit-overflow-scrolling: touch; /* Smooth scrolling on iPad */
+  max-height: 505px; /* Define a maximum height for the container */
+  overflow-y: scroll;  /* Enable scrolling if content exceeds the max height */
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on mobile devices */
 }
 .services-content i {
   font-size: 2.5rem;
